--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,16 +12,16 @@
     "next": "12.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "ui": "workspace:*"
+    "react-components": "workspace:*"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
-    "eslint-config-custom": "workspace:*",
     "eslint": "7.32.0",
-    "next-transpile-modules": "9.0.0",
-    "tsconfig": "workspace:*",
+    "ts-config": "workspace:*",
     "@types/node": "^17.0.12",
     "@types/react": "17.0.48",
-    "typescript": "^4.5.3"
+    "typescript": "^4.7.4",
+    "next-transpile-modules": "9.0.0",
+    "eslint-config-base": "workspace:*"
   }
 }
