--- a/packages/config-esbuild/package.json
+++ b/packages/config-esbuild/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "esbuild-config",
+  "name": "config-esbuild",
   "version": "0.0.0",
   "devDependencies": {
     "esbuild": "^0.15.7"
