--- a/packages/react-components/package.json
+++ b/packages/react-components/package.json
@@ -12,7 +12,7 @@
     "@types/react-dom": "^17.0.17",
     "eslint": "^7.32.0",
     "react": "^17.0.2",
-    "ts-config": "workspace:0.0.0",
+    "config-ts": "workspace:*",
     "typescript": "^4.8.2"
   }
 }
