--- a/packages/react-components/tsconfig.json
+++ b/packages/react-components/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "ts-config/react-library.json",
+  "extends": "config-ts/react-library.json",
   "include": ["."],
   "exclude": ["dist", "build", "node_modules"]
 }
