--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "examples/*"
   ],
   "scripts": {
-    "build": "turbo run build",
-    "build:crates": "node .scripts/build_crates.js",
     "dev": "turbo run dev --parallel",
+    "build": "turbo run build",
+    "upgrade": "turbo run upgrade --parallel",
+    "lint": "turbo run lint --parallel",
+    "build:crates": "node .scripts/build_crates.js",
     "format": "prettier --write \"**/*.{ts,tsx,js,md,mdx}\"",
-    "lint": "npm run lint:packages && npm run lint:examples",
-    "lint:packages": "turbo run lint",
-    "lint:examples": "eslint --cache --fix --ext .js examples tests",
+    "lint:all": "npm run lint && npm run lint:examples",
+    "lint:examples": "eslint --cache-location .cache --fix --ext .js examples tests",
     "rome:lint": "rome check ./packages/**/src",
     "prepare": "husky install",
     "test": "npm run test:js && npm run test:crates",
@@ -25,15 +26,16 @@
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^17.1.0",
-    "@types/node": "^16.11.58",
-    "@typescript-eslint/eslint-plugin": "^5.36.2",
-    "@typescript-eslint/parser": "^5.36.2",
-    "eslint": "^8.23.0",
-    "eslint-config-base": "workspace:*",
+    "@types/node": "^16.11.59",
+    "@typescript-eslint/eslint-plugin": "^5.38.0",
+    "@typescript-eslint/parser": "^5.38.0",
+    "eslint": "^8.23.1",
+    "eslint-config-base": "workspace:0.0.0",
     "husky": "^7.0.4",
     "prettier": "^2.7.1",
+    "rome": "0.8.0-next.ff4153b",
     "turbo": "latest",
-    "typescript": "^4.8.2",
+    "typescript": "^4.8.3",
     "vitest": "^0.21.1"
   },
   "engines": {
