--- a/packages/base-utils/package.json
+++ b/packages/base-utils/package.json
@@ -1,10 +1,11 @@
 {
   "name": "base-utils",
   "version": "1.0.0",
-  "dependencies": {
+  "scripts": {
+    "upgrade": "pnpm update"
   },
   "devDependencies": {
-    "config-ts": "workspace:*",
-    "typescript": "^4"
+    "config-ts": "workspace:0.0.0",
+    "typescript": "^4.8.3"
   }
 }
