--- a/packages/config-esbuild/package.json
+++ b/packages/config-esbuild/package.json
@@ -1,7 +1,10 @@
 {
   "name": "config-esbuild",
   "version": "0.0.0",
+  "scripts": {
+    "upgrade": "pnpm update"
+  },
   "devDependencies": {
-    "esbuild": "^0.15.7"
+    "esbuild": "^0.15.9"
   }
 }
