--- a/packages/config-rollup/package.json
+++ b/packages/config-rollup/package.json
@@ -1,10 +1,12 @@
 {
   "name": "config-rollup",
   "version": "0.0.1",
-  "scripts": {},
+  "scripts": {
+    "upgrade": "pnpm update"
+  },
   "devDependencies": {
-    "@babel/core": "^7.19.0",
-    "@babel/preset-env": "^7.19.0",
+    "@babel/core": "^7.19.1",
+    "@babel/preset-env": "^7.19.1",
     "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-commonjs": "^22.0.2",
     "@rollup/plugin-json": "^4.1.0",
@@ -13,10 +15,10 @@
     "@rollup/plugin-typescript": "^8.5.0",
     "@rollup/plugin-wasm": "^5.2.0",
     "@rollup/pluginutils": "^4.2.1",
-    "@types/node": "^18.7.16",
-    "rollup": "^2.79.0",
+    "@types/node": "^18.7.18",
+    "rollup": "^2.79.1",
     "ts-node": "^10.9.1",
     "tslib": "^2.4.0",
-    "typescript": "^4.8.2"
+    "typescript": "^4.8.3"
   }
 }
