--- a/packages/eslint-config-base/package.json
+++ b/packages/eslint-config-base/package.json
@@ -3,16 +3,19 @@
   "version": "0.0.0",
   "main": "index.config.js",
   "license": "MIT",
+  "scripts": {
+    "upgrade": "pnpm update"
+  },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.36.2",
-    "@typescript-eslint/parser": "^5.36.2",
-    "eslint": "^8.23.0",
-    "eslint-config-next": "^12.2.5",
-    "eslint-config-turbo": "latest",
-    "eslint-plugin-react": "7.28.0"
+    "@typescript-eslint/eslint-plugin": "^5.38.0",
+    "@typescript-eslint/parser": "^5.38.0",
+    "eslint": "^8.23.1",
+    "eslint-config-next": "^12.3.1",
+    "eslint-config-turbo": "^0.0.3",
+    "eslint-plugin-react": "^7.31.8"
   },
   "devDependencies": {
-    "typescript": "^4.8.2"
+    "typescript": "^4.8.3"
   },
   "publishConfig": {
     "access": "public"
