--- a/.config/.eslintrc
+++ b/.config/.eslintrc
@@ -4,12 +4,8 @@
     "es2021": true,
     "node": true
   },
-  "extends": [
-    "plugin:@typescript-eslint/recommended",
-    "eslint:recommended"
-  ],
-  "overrides": [
-  ],
+  "extends": ["plugin:@typescript-eslint/recommended", "eslint:recommended"],
+  "overrides": [],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": "latest",
