--- a/package.json
+++ b/package.json
@@ -12,22 +12,21 @@
   "scripts": {
     "dev": "pnpm run dev",
     "prepare": "husky install",
-    "lint": "eslint --ext .ts,.tsx,.js,.jsx ."
+    "format": "node .config/format.mjs",
+    "lint": "node .config/eslint.mjs"
   },
   "devDependencies": {
-    "@types/node": "^18.15.11",
-    "@typescript-eslint/eslint-plugin": "^5.57.1",
-    "@typescript-eslint/parser": "^5.57.1",
-    "eslint": "^8.38.0",
+    "@types/node": "^18.16.6",
+    "@typescript-eslint/eslint-plugin": "^5.59.5",
+    "@typescript-eslint/parser": "^5.59.5",
+    "eslint": "^8.40.0",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.3",
-    "prettier": "^2.8.7",
+    "prettier": "^2.8.8",
     "typescript": "^5.0.4",
-    "vite": "^4.2.1",
-    "vitest": "^0.30.0"
+    "vite": "^4.3.5",
+    "vitest": "^0.31.0"
   },
   "private": true,
-  "type": "module",
-  "dependencies": {
-  }
+  "type": "module"
 }
