--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,7 +1,7 @@
 packages:
-  - "apps/*"
-  - "packages/*"
-  - "crates/*"
-  - "plugins/*"
-  - "examples/*"
-  - "extensions/*"
+  - 'apps/*'
+  - 'packages/*'
+  - 'crates/*'
+  - 'plugins/*'
+  - 'examples/*'
+  - 'extensions/*'
